# axum-api-core

./: .env.example  Cargo.toml  README.md  test-request.http
api/: Cargo.toml
api/src/: lib.rs  route.rs
api/src/routes/: mod.rs
api/src/routes/case/: args.rs
api/src/routes/websocket/: mod.rs  ws.rs
app/: Cargo.toml
app/src/: route.rs
app/src/api/: mod.rs  system.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/config/: database_config.rs  mod.rs  server_config.rs
common/src/response/: error.rs  login.rs  mod.rs
common/src/utils/: response.rs
common/src/validator/: form.rs  json.rs  mod.rs  path.rs  query.rs
core/: Cargo.toml
core/src/: lib.rs  system.rs
core/src/engine/: blade.rs  mod.rs
core/src/tasks/: manager.rs  task_one.rs
database/: Cargo.toml
database/src/: lib.rs
http/: Cargo.toml
http/src/: route.rs
http/src/api/case/: args.rs
http/src/websocket/: mod.rs
kernel/: Cargo.toml
kernel/src/: lib.rs  system.rs
middleware-fn/src/: request.rs
orm/: Cargo.toml
orm/src/entities/: sys_user.rs
orm/src/repository/: sys_user.rs
resources/_static/websocket/: style.css
resources/_view/: index.blade.html
resources/_view/websocket/: index.blade.html
