[workspace]
members = ["api", "bin", "common", "core", "orm"]
resolver = "3"

[workspace.package]
authors = ["pengsy <songyang410@outlook.com>"]
edition = "2024"
homepage = "https://github.com/pengsy94"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[workspace.dependencies]
axum = "0.8.8"
axum-server = "0.8.0"
anyhow = "1.0.100"
dotenvy = "0.15.7"
num_cpus = "1.17.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"
tokio-cron-scheduler = "0.15.1"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"
thiserror = "2.0.17"
time = "0.3.44"
chrono = "0.4.42"
futures-util = "0.3.31"
uuid = "1.19.0"
tera = "1.20.1"
once_cell = "1.21.3"
sea-orm = "2.0.0-rc.22"


