[package]
name = "api"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }
core = { path = "../core" }
orm = { path = "../orm" }

axum = { workspace = true, features = ["multipart", "ws"] }
tower-http = { workspace = true, features = ["full", "fs", "cors", "trace"] }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
