[package]
name = "core"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }

serde = { workspace = true, features = ["derive"] }
tera = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true, features = ["v4"]}
tokio = { workspace = true, features = ["full", "signal"] }
tracing = { workspace = true }
tokio-cron-scheduler = { workspace = true }