[package]
name = "core"
edition.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
common = { path = "../common" }

chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tokio = { workspace = true, features = ["full", "signal"] }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
num_cpus = { workspace = true }